# EchoMind_Agent

echomind/: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
echomind/app/api/: routes.py
echomind/app/core/: __init__.py  agent_engine.py  config.py  llm_client.py
echomind/app/memory/: __init__.py  conflict_resolver.py  consolidator.py  forgetting_engine.py  long_term_memory.py  working_memory.py
echomind/app/models/: __init__.py  chat_models.py  memory_models.py  user_models.py
echomind/app/tools/: __init__.py  base_tools.py  search_tool.py  time_tool.py
echomind/frontend/: chainlit_app.py
echomind/tests/: test_memory_core.py
