[tool.poetry]
name = "echomind"
version = "2.0.0"
description = "EchoMind 2.0 - Bionic Cognitive Memory Agent with ReAct reasoning"
authors = ["EchoMind Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.0"
dashscope = "^1.20.0"
python-dotenv = "^1.0.0"
chainlit = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]